# RoboticNavigation

./: .gitignore  README.md
docs/: 03 (1).5 TF  Notes of ROS.md  map.pgm
docs/Reports/: Report_of_LAB3.md
docs/followerdemo/: Follower.docx  RawNotes.txt
docs/followerdemo/附件/: clf2_py3  follower  turtlebot3_follow_filter.yaml
src/actionlib_tutorials/: package.xml
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/scripts/: turtlesim_saver.py
src/lab3/: package.xml
src/lab3/script/: lidar_revised.py
src/lab4/: CMakeLists.txt  package.xml
src/lab4/script/: pole_follower.py
src/lab4/scripts/: pole_follower.py
src/lab6/: CMakeLists.txt  package.xml
src/lab6/scripts/: nav_pose.py  nav_pose_new.py
src/lab7/: CMakeLists.txt  package.xml
src/lab7/scripts/: find_pole.py  nav_track.py  test.py
src/turtlebot3_follower/config/: clf_py3
src/turtlebot3_follower/nodes/: follower  laser_subscriber
